--- a/src/app/story-item/story-item.component.html
+++ b/src/app/story-item/story-item.component.html
@@ -1,5 +1,4 @@
-<div>
-    <h3>{{ story.title }}</h3>
-    <a *ngIf="story.url" [href]="story.url" target="_blank">Read more</a>
-  </div>
-  
+<div *ngIf="story">
+  <h3>{{ story.title }}</h3>
+  <a *ngIf="story.url" [href]="story.url" target="_blank">Read more</a>
+</div>
